add about us link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h3>關於梅屋<br>About Us</h3>
                 <p>使用台灣在地青梅釀造, <br><br>
                     將驕傲的美味帶到每個台灣人與喜愛梅酒的人面前</p>
-                <a href="#">View more</a>
+                <a href="about.html">View more</a>
             </div>
         </div>
 
