--- a/login.html
+++ b/login.html
@@ -71,7 +71,25 @@
                 <input type="text" placeholder="請輸入註冊Email" size="50">
                 <button type="submit">送出</button>
             </div>
-
     </section>
+
+    <!-- 酒後不開車聲明 -->
+    <div class="warning">
+        <img src="./index/warning1200.svg" alt="">
+    </div>
+
+    <!-- footer -->
+    <footer id="footer">
+        <ul class="footer_inner">
+            <p>© Umeya. All rights reserved. 本網站為緯育TibaMe前端設計工程師班TFD105期學員專題作品，僅供學習、展示之用。</p>
+            <div class="footer_icon">
+                <li><a href="https://zh-tw.facebook.com" target="window name"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com/" target="window name2">
+                        <i class="fab fa-instagram"></i></a></li>
+            </div>
+        </ul>
+    </footer>
+    
 </body>
 </html>
