--- a/bar.html
+++ b/bar.html
@@ -134,6 +134,11 @@
                 </div>
             </ul>
         </footer>
+        
+        <!-- go to top btn -->
+        <div>
+            <button id="topBtn">Top</button>
+        </div>
 </body>
 
 </html>
