--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
                 </div>
             </ul>
         </footer>
+
+        <!-- go to top btn -->
+        <div>
+            <button id="topBtn">Top</button>
+        </div>
+
     </div>
 </body>
 
