--- a/list.html
+++ b/list.html
@@ -68,7 +68,7 @@
             <li class="listItem">
                 <img class="listProduct" src="./Product/商品圖/product-6.png" alt="">
                 <p>燒酌梅酒<br>600ml</p>
-                <input class="listNum" type="number" name="updates[]" value="1" min="0"> 
+                <input class="listNum" type="number" name="updates[]" value="1" min="0">
                 <img class="trash" src="./list/ゴミ箱のアイコン素材.png" alt="">
             </li>
         </ul>
@@ -98,11 +98,11 @@
         <div>
             <button class="sendBtn" type="button">送出詢問單</button>
         </div>
-       <div>
-        <button class="keepBtn" type="button">繼續瀏覽</button>
-       </div>
+        <div>
+            <button class="keepBtn" type="button">繼續瀏覽</button>
+        </div>
     </div>
-    
+
 
     <!-- 酒後不開車聲明 -->
     <div class="warning">
@@ -121,6 +121,11 @@
             </div>
         </ul>
     </footer>
+
+    <!-- go to top btn -->
+    <div>
+        <button id="topBtn">Top</button>
+    </div>
 
 </body>
 
