--- a/about.html
+++ b/about.html
@@ -141,6 +141,12 @@
                 </div>
             </ul>
         </footer>
+
+        <!-- go to top btn -->
+        <div>
+            <button id="topBtn">Top</button>
+        </div>
+
     </div>
 </body>
 
