--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </li>
                     <div class="header_icon">
                         <li>
-                            <a href="signin.html"><i class="fas fa-user"></i></a>
+                            <a href="login.html"><i class="fas fa-user"></i></a>
                         </li>
                         <li>
                             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
