--- a/bar.html
+++ b/bar.html
@@ -44,7 +44,7 @@
 
                     <div class="header_icon">
                         <li>
-                            <a href="signin.html"><i class="fas fa-user"></i></a>
+                            <a href="login.html"><i class="fas fa-user"></i></a>
                         </li>
                         <li>
                             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
