--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
                     <div class="header_icon">
                         <li>
-                            <a href="signin.html"><i class="fas fa-user"></i></a>
+                            <a href="login.html"><i class="fas fa-user"></i></a>
                         </li>
                         <li>
                             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
@@ -69,7 +69,7 @@
             <div class="forgetPasswd">
                 <h3>忘記密碼</h3>
                 <input type="text" placeholder="請輸入註冊Email" size="50">
-                <button type="submit">送出</button>
+                <a href="signin.html"><button type="submit">送出</button></a>
             </div>
     </section>
 
