--- a/login.html
+++ b/login.html
@@ -63,13 +63,13 @@
                 <input type="text" placeholder="請輸入註冊Email" size="50">
                 <input type="text" placeholder="請輸入密碼" size="30">
                 <button type="submit">登入</button>
-                <button type="submit">註冊</button>
+                <a href="signin.html"><button type="submit">註冊</button></a>
             </div>
             <hr class="divider">
             <div class="forgetPasswd">
                 <h3>忘記密碼</h3>
                 <input type="text" placeholder="請輸入註冊Email" size="50">
-                <a href="signin.html"><button type="submit">送出</button></a>
+                <button type="submit">送出</button>
             </div>
     </section>
 
