--- a/list.html
+++ b/list.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
-    <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="/css/list.css">
+    <link rel="stylesheet" href="/css/nav_footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -66,7 +67,7 @@
                 <p>數量</p>
             </li>
             <li class="listItem">
-                <img class="listProduct" src="./Product/商品圖/product-6.png" alt="">
+                <img class="listProduct" src="./Product/Product pic/product-6.png" alt="">
                 <p>燒酌梅酒<br>600ml</p>
                 <input class="listNum" type="number" name="updates[]" value="1" min="0">
                 <img class="trash" src="./list/ゴミ箱のアイコン素材.png" alt="">
