--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                         <a href="bar.html">品梅吧<br>UME BAR</a>
                     </li>
                     <li>
-                        <a href="store.html">找到梅<br>OUR STORE</a>
+                        <a href="store.html">梅屋商店<br>OUR STORE</a>
                     </li>
                     <li>
                         <a href="contact.html">聯絡我們<br>CONTACT US</a>
@@ -75,9 +75,7 @@
     </section>
 
     <!-- 酒後不開車聲明 -->
-    <div class="warning">
-        <img src="./index/warning1200.svg" alt="">
-    </div>
+    <div class="warning"></div>
 
     <!-- footer -->
     <footer id="footer">
