--- a/contact.html
+++ b/contact.html
@@ -98,13 +98,13 @@
         </div>
 
         <div class="agreebox">
-            <label class="agreeInner" for="">
+            <div class="agreeInner" for="">
                 <input type="checkbox" name="iagree" value="1" id="agree">
                 <span>
                     我已閱讀並同意
                     <a href="#"><u>隱私權與個資保護聲明</u></a>
                 </span>
-            </label>
+            </div>
         </div>
 
         <div class="agreeSend">
