--- a/bar.html
+++ b/bar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>梅屋 UMEYA</title>
+    <title>品梅吧 | 梅屋 UMEYA</title>
     <link rel="stylesheet" href="./css/nav_footer.css">
     <link rel="stylesheet" href="./css/bar_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
