update intro img

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                 </p>
             </div>
             <div class="intro_bottom_pic">
-                <img src="./About/TKLumesan612002.jpg" alt="">
+                <img src="./About/intro_bottom_pic2.jpg" alt="">
             </div>
         </div>
 
