update top banner

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- Top Banner -->
         <div class="top_banner">
-            <img src="./index/index_banner.jpg" alt="">
+            <!-- <img src="./index/index_banner.jpg" alt=""> -->
             <img class="center_logo" src="./Logo/logo_white.svg" alt="">
         </div>
 
