update top banner

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
         <!-- Top Banner -->
         <div class="top_banner">
-            <img src="./About/banner.jpg" alt="">
+            <!-- <img src="./About/banner.jpg" alt=""> -->
             <h2>關於梅屋</h2>
         </div>
 
