--- a/bar.html
+++ b/bar.html
@@ -57,7 +57,8 @@
 
         <!-- Top Banner -->
         <div class="top_banner">
-            <img src="./Bar/umebar_banner_word.jpg" alt="">
+            <img class="barThe" src="./Bar/The.svg" alt="">
+            <img class="barLogo" src="./Bar/UME BAR logo.svg" alt="">
         </div>
 
         <!-- intro -->
