--- a/product.html
+++ b/product.html
@@ -57,8 +57,7 @@
 
         <!-- Top Banner -->
         <div class="top_banner">
-            <img src="./Product/product_banner-3.jpg" alt="">
-            <h2>梅屋產品</h2>
+            <h2>產品一覽</h2>
         </div>
 
         <!-- intro -->
