update item list

--- a/product.html
+++ b/product.html
@@ -108,7 +108,7 @@
         <div class="mainProduct">
             <div class="item">
                 <div class="itemInnerPic">
-                    <img src="./Product/Product pic/product-2.png" alt="">
+                    <img class="ume" src="./Product/Product pic/product-2.png" alt="">
                 </div>
                 <div class="itemInnerText">
                     <h3>手工醉梅</h3>
