--- a/bar.html
+++ b/bar.html
@@ -97,11 +97,31 @@
 
             <div class="cocktaillist">
                 <ul>
-                    <li class="c1"></li>
-                    <li class="c2"></li>
-                    <li class="c3"></li>
-                    <li class="c4"></li>
-                    <li class="c5"></li>
+                    <li class="c1">
+                        <p>Old Fashioned<br><br>
+                            梅酒<br>方糖<br>苦精<br>
+                        </p>
+                    </li>
+                    <li class="c2">
+                        <p>Daiquiri<br><br>
+                            梅酒<br>蘭姆酒<br>檸檬汁<br>
+                        </p>
+                    </li>
+                    <li class="c3">
+                        <p>Ume Sour<br><br>
+                            梅酒<br>薄荷<br>砂糖<br>氣泡水
+                        </p>
+                    </li>
+                    <li class="c4">
+                        <p>Manhattan<br><br>
+                            威士忌梅酒<br>苦精<br>甜苦艾酒<br>
+                        </p>
+                    </li>
+                    <li class="c5">
+                        <p>Ume Sour<br><br>
+                            梅酒<br>檸檬汁<br>糖漿<br>
+                        </p>
+                    </li>
                 </ul>
             </div>
         </div>
