--- a/store.html
+++ b/store.html
@@ -100,6 +100,7 @@
                 </li>
                 <li class="s9">
                     <p>找更多梅酒<br>歡迎光臨梅屋商店</p>
+                    <i class="fas fa-angle-double-down"></i>
                 </li>
             </ul>
         </div>
