update trash icon

--- a/list.html
+++ b/list.html
@@ -56,6 +56,7 @@
         </nav>
     </div>
 
+    <!-- 訊問清單內容 -->
     <div class="listHead">
         <h3>詢問清單</h3>
     </div>
@@ -70,7 +71,7 @@
                 <img class="listProduct" src="./Product/Product pic/product-6.png" alt="">
                 <p>燒酌梅酒<br>600ml</p>
                 <input class="listNum" type="number" name="updates[]" value="1" min="0">
-                <img class="trash" src="./list/ゴミ箱のアイコン素材.png" alt="">
+                <i class="far fa-trash-alt"></i>
             </li>
         </ul>
     </div>
@@ -100,7 +101,7 @@
             <button class="sendBtn" type="button">送出詢問單</button>
         </div>
         <div>
-            <button class="keepBtn" type="button">繼續瀏覽</button>
+            <button class="keepBtn" type="button"><a href="/product.html">繼續瀏覽</a></button>
         </div>
     </div>
 
