update keepbtn link

--- a/list.html
+++ b/list.html
@@ -101,7 +101,7 @@
             <button class="sendBtn" type="button">送出詢問單</button>
         </div>
         <div>
-            <button class="keepBtn" type="button"><a href="/product.html">繼續瀏覽</a></button>
+            <button class="keepBtn" type="button"><a href="product.html">繼續瀏覽</a></button>
         </div>
     </div>
 
