update logo link

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <!-- 導覽列 -->
         <nav id="header">
             <div class="header_logo">
-                <a href="/index.html"> <img src="./Logo/main logo.svg" alt=""></a>
+                <a href="index.html"> <img src="./Logo/main logo.svg" alt=""></a>
             </div>
 
             <div class="header_list">
