update banner size

--- a/index.html
+++ b/index.html
@@ -81,23 +81,24 @@
                 <ul class="index_product_list">
                     <li>
                         <img src="./index/index product/1.png" alt="">
-                        <a href="product.html">View more</a>
+                        <p>手工酒梅</p>
                     </li>
                     <li class="index_product_item">
                         <img src="./index/index product/2.png" alt="">
-                        <a href="product.html">View more</a>
+                        <p>清酒梅酒</p>
                     </li>
                     <li class="index_product_item">
                         <img src="./index/index product/3.png" alt="">
-                        <a href="product.html">View more</a>
+                        <p>威士忌梅酒</p>
+                        <a class="productbtn" href="product.html">View more</a>
                     </li>
                     <li class="index_product_item">
                         <img src="./index/index product/4.png" alt="">
-                        <a href="product.html">View more</a>
+                        <p>燒酌梅酒</p>
                     </li>
                     <li class="index_product_item">
                         <img src="./index/index product/5.png" alt="">
-                        <a href="product.html">View more</a>
+                        <p>泡盛梅酒</p>
                     </li>
                 </ul>
             </div>
