update bartender pic

--- a/bar.html
+++ b/bar.html
@@ -73,19 +73,19 @@
         <div class="bartenderIntro">
             <div class="bartenderContent">
                 <div class="bartenderpic">
-                    <img src="./Bar/1x/lt.jpg" alt="">
+                    <img src="./Bar/bartenderlt.jpg" alt="">
                     <p>Darren Duan</p>
                 </div>
             </div>
             <div class="bartenderContent">
                 <div class="bartenderpic">
-                    <img src="./Bar/1x/mid.jpg" alt="">
+                    <img src="./Bar/bartenderrt.jpg" alt="">
                     <p>Jillian Chuang</p>
                 </div>
             </div>
             <div class="bartenderContent">
                 <div class="bartenderpic">
-                    <img src="./Bar/1x/rt.jpg" alt="">
+                    <img src="./Bar/bartender.jpg" alt="">
                     <p>Tess de Vries</p>
                 </div>
             </div>
