--- a/contact.html
+++ b/contact.html
@@ -75,23 +75,21 @@
             <form action="#" class="contactForm" method="post" accept-charset="utf-8">
                 <div class="formItem">
                     <div class="formInput">
-                        <input type="text" placeholder="*請填寫姓名" required="required">
+                        <input type="text" placeholder="請填寫姓名*" required="required">
                     </div>
                 </div>
                 <div class="formItem">
                     <div class="formInput">
-                        <input type="text" placeholder="*請填寫聯絡E-mail" required="required">
+                        <input type="text" placeholder="請填寫聯絡E-mail*" required="required">
                     </div>
                 </div>
                 <div class="formItem">
                     <div class="formInput">
-                        <input type="text" placeholder="*請填寫電話" required="required">
+                        <input type="text" placeholder="請填寫電話*" required="required">
                     </div>
                 </div>
                 <div class="formItem">
-                    <div class="formInput">
-                        <input type="text" placeholder="*請填寫問題與意見" required="required" class="inputComment">
-                    </div>
+                        <textarea placeholder="請填寫訊息*"></textarea>
                 </div>
             </form>
         </div>
