update go to top btn

--- a/about.html
+++ b/about.html
@@ -143,7 +143,9 @@
 
         <!-- go to top btn -->
         <div>
-            <button id="topBtn">Top</button>
+            <button id="topBtn">
+                <i class="far fa-arrow-alt-circle-up"></i>
+            </button>
         </div>
 
     </div>
