--- a/bar.html
+++ b/bar.html
@@ -71,18 +71,18 @@
 
         <!-- 世界級調酒師 -->
         <div class="bartenderIntro">
-                <div class="bartenderpic">
-                    <img src="./Bar/bartenderlt.jpg" alt="">
-                    <p>Darren Duan</p>
-                </div>
-                <div class="bartenderpic">
-                    <img src="./Bar/bartenderrt.jpg" alt="">
-                    <p>Jillian Chuang</p>
-                </div>
-                <div class="bartenderpic">
-                    <img src="./Bar/bartender.jpg" alt="">
-                    <p>Tess de Vries</p>
-                </div>
+            <div class="bartenderpic">
+                <img src="./Bar/bartenderlt.jpg" alt="">
+                <p>Darren Duan</p>
+            </div>
+            <div class="bartenderpic">
+                <img src="./Bar/bartenderrt.jpg" alt="">
+                <p>Jillian Chuang</p>
+            </div>
+            <div class="bartenderpic">
+                <img src="./Bar/bartender.jpg" alt="">
+                <p>Tess de Vries</p>
+            </div>
         </div>
 
         <!-- 調酒圖片區 -->
@@ -148,10 +148,12 @@
                 </div>
             </ul>
         </footer>
-        
+
         <!-- go to top btn -->
         <div>
-            <button id="topBtn">Top</button>
+            <button id="topBtn">
+                <i class="far fa-arrow-alt-circle-up"></i>
+            </button>
         </div>
 </body>
 
