--- a/store.html
+++ b/store.html
@@ -133,6 +133,13 @@
             </ul>
         </footer>
 
+        <!-- go to top btn -->
+        <div>
+            <button id="topBtn">
+                <i class="far fa-arrow-alt-circle-up"></i>
+            </button>
+        </div>
+
 </body>
 
 </html>
