--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 
         <!-- go to top btn -->
         <div>
-            <button id="topBtn">Top</button>
+            <button id="topBtn">
+                <i class="far fa-arrow-alt-circle-up"></i>
+            </button>
         </div>
     </div>
 
