--- a/list.html
+++ b/list.html
@@ -124,7 +124,9 @@
 
     <!-- go to top btn -->
     <div>
-        <button id="topBtn">Top</button>
+        <button id="topBtn">
+            <i class="far fa-arrow-alt-circle-up"></i>
+        </button>
     </div>
 
 </body>
