--- a/product.html
+++ b/product.html
@@ -392,6 +392,29 @@
         </div>
 
     </div>
+
+    <script>
+        //Get the button
+        mybutton = document.getElementById("topBtn");
+        window.onscroll = function () {
+            scrollFunction()
+        };
+
+        // When the user scrolls down 30px from the top of the document, show the button
+        function scrollFunction() {
+            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 30) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+
+    </script>
 </body>
 
 </html>
