--- a/store.html
+++ b/store.html
@@ -135,10 +135,33 @@
 
         <!-- go to top btn -->
         <div>
-            <button id="topBtn">
+            <button id="topBtn" onclick="topFunction()" title="Go to top">
                 <i class="far fa-arrow-alt-circle-up"></i>
             </button>
         </div>
+
+        <script>
+            //Get the button
+            mybutton = document.getElementById("topBtn");
+            window.onscroll = function () {
+                scrollFunction()
+            };
+
+            // When the user scrolls down 30px from the top of the document, show the button
+            function scrollFunction() {
+                if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 30) {
+                    mybutton.style.display = "block";
+                } else {
+                    mybutton.style.display = "none";
+                }
+            }
+            // When the user clicks on the button, scroll to the top of the document
+            function topFunction() {
+                document.body.scrollTop = 0;
+                document.documentElement.scrollTop = 0;
+            }
+
+        </script>
 
 </body>
 
