update font CDN

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
 </head>
 
 <body>
@@ -50,6 +52,9 @@
                             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </div>
+                    <a href="#" class="burgar_btn">
+                        <i class="fas fa-bars"></i>
+                    </a>
                 </ul>
             </div>
         </nav>
