--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         // When the user scrolls down 100px from the top of the document, show the button
         function scrollFunction() {
-            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+            if (document.body.scrollTop > 700 || document.documentElement.scrollTop > 700) {
                 mybutton.style.display = "block";
             } else {
                 mybutton.style.display = "none";
@@ -177,6 +177,10 @@
             document.documentElement.scrollTop = 0;
         }
 
+        $backToTop.click(function () {
+            $('html, body').anitmation({ scrollTop: 0 }, 200);
+        });
+        
     </script>
 </body>
 
