--- a/store.html
+++ b/store.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>梅屋 UMEYA</title>
         <link rel="stylesheet" href="./css/nav_footer.css">
-        <link rel="stylesheet" href="./css/index_style.css">
+        <link rel="stylesheet" href="./css/store_style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -149,14 +149,14 @@
                 scrollFunction()
             };
 
-            // When the user scrolls down 30px from the top of the document, show the button
+            // When the user scrolls down 700px from the top of the document, show the button
             function scrollFunction() {
-                if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 30) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
+            if (document.body.scrollTop > 700 || document.documentElement.scrollTop > 700) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
             }
+        }
             // When the user clicks on the button, scroll to the top of the document
             function topFunction() {
                 document.body.scrollTop = 0;
@@ -164,10 +164,6 @@
             }
 
         </script>
-<<<<<<< HEAD
-
-=======
->>>>>>> 06cd3ef7cf3494b34cd943f500fa2ae345062e55
 </body>
 
 </html>
