update burger btn

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </div>
-                    <a href="#" class="burgar_btn">
-                        <i class="fas fa-bars"></i>
+
+                    <a href="javascript:void(0);" class="burgar_btn" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
                     </a>
                 </ul>
             </div>
@@ -180,7 +181,7 @@
         $backToTop.click(function () {
             $('html, body').anitmation({ scrollTop: 0 }, 200);
         });
-        
+
     </script>
 </body>
 
