--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>梅屋 UMEYA</title>
-        <link rel="stylesheet" href="./css/nav_footer.css">
+        <link rel="stylesheet" href="./css/newNavandFooter.css">
         <link rel="stylesheet" href="./css/about_style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,41 +20,36 @@
     </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrap">
 
         <!-- 導覽列 -->
-        <nav id="header">
-            <div class="header_logo">
-                <a href="index.html"> <img src="./Logo/main logo.svg" alt=""></a>
+        <nav class="header">
+            <div class="logo">
+                <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
             </div>
-
-            <div class="header_list">
-                <ul>
-                    <li class="header_list_item">
-                        <a href="about.html">關於梅屋<br>ABOUT US</a>
-                    </li>
-                    <li>
-                        <a href="product.html">商品一覽<br>PRODUCTS</a>
-                    </li>
-                    <li>
-                        <a href="bar.html">品梅吧<br>UME BAR</a>
-                    </li>
-                    <li>
-                        <a href="store.html">梅屋商店<br>OUR STORE</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">聯絡我們<br>CONTACT US</a>
-                    </li>
-
-                    <div class="header_icon">
-                        <li>
-                            <a href="login.html"><i class="fas fa-user"></i></a>
-                        </li>
-                        <li>
-                            <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-                        </li>
-                    </div>
-                </ul>
+            <ul class="menu">
+                <li class="menu_list">
+                    <a href="about.html">關於梅屋<br>ABOUT US</a>
+                </li>
+                <li>
+                    <a href="product.html">商品一覽<br>PRODUCTS</a>
+                </li>
+                <li>
+                    <a href="bar.html">品梅吧<br>UME BAR</a>
+                </li>
+                <li>
+                    <a href="store.html">梅屋商店<br>OUR STORE</a>
+                </li>
+                <li>
+                    <a href="contact.html">聯絡我們<br>CONTACT US</a>
+                </li>
+            </ul>
+            <a href="#" class="showmenu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <div class="header_icon">
+                <a href="login.html"><i class="fas fa-user"></i></a>
+                <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
         </nav>
 
