--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
     <!-- <link rel="stylesheet" href="./css/nav_footer.css"> -->
-    <link rel="stylesheet" href="./css/test.css">
+    <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,10 +25,6 @@
             <div class="logo">
                 <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
             </div>
-            <a href="#" class="showmenu">
-                <i class="fa fa-bars"></i>
-            </a>
-            
             <ul class="menu">
                 <li class="menu_list">
                     <a href="about.html">關於梅屋<br>ABOUT US</a>
@@ -46,10 +42,11 @@
                     <a href="contact.html">聯絡我們<br>CONTACT US</a>
                 </li>
             </ul>
-            
+
             <div class="header_icon">
                 <a href="login.html"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
             </div>
         </nav>
 
