--- a/bar.html
+++ b/bar.html
@@ -43,12 +43,11 @@
                     <a href="contact.html">聯絡我們<br>CONTACT US</a>
                 </li>
             </ul>
-            <a href="#" class="showmenu">
-                <i class="fa fa-bars"></i>
-            </a>
+
             <div class="header_icon">
                 <a href="login.html"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+                <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
             </div>
         </nav>
 
